# todos_app

./: .gitignore  README.md  pyproject.toml
src/: .env  database.py  main.py  models.py  schemas.py  settings.py
src/admin/: routes.py
src/auth/: models.py  routes.py  schemas.py  service.py  settings.py
src/routes/: todo.py  user.py
src/todos/: models.py  routes.py  schemas.py  service.py
src/users/: models.py  routes.py  schemas.py  service.py
tests/: conftest.py  test_admin.py  test_auth.py  test_todo.py  test_user.py
